gcc/testsuite/g++.dg/expr/cast1.C
struct S; // { dg-error "forward" } 

void f(S* p) { ((S) (*p)); } // { dg-error "" }
